--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.22",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sharp": "^0.32.0",
     "shortid": "^2.2.16",
